src/parser.js
import { TokenType, Token } from "./tokens.js";
import { CustomNode, AddNode, DivideNode, MinusNode, ModuloNode, MultiplyNode, NumberNode, PlusNode, PowerNode, SubtractNode, VarAssignNode, VarAccessNode, VarModifyNode, OrNode, NotNode, AndNode, EqualsNode, LessThanNode, LessThanOrEqualNode, GreaterThanNode, GreaterThanOrEqualNode, NotEqualsNode, NullishOperatorNode, ListNode, ListAccessNode, ListAssignmentNode, ListPushBracketsNode, ListBinarySelector, StringNode, IfNode, ForNode, WhileNode, FuncDefNode, CallNode, ReturnNode, ContinueNode, BreakNode, DefineNode, DeleteNode, PrefixOperationNode, PostfixOperationNode, DictionnaryElementNode, DictionnaryNode, ForeachNode, ClassPropertyDefNode, ClassMethodDefNode, ClassDefNode, ClassCallNode, CallPropertyNode, AssignPropertyNode, CallMethodNode, CallStaticPropertyNode, SuperNode, ArgumentNode, EnumNode, SwitchNode, NoneNode, BooleanNode, BinaryShiftLeftNode, BinaryShiftRightNode, UnsignedBinaryShiftRightNode, NullishAssignmentNode, LogicalAndNode, LogicalOrNode, LogicalXORNode, BinaryNotNode, AndAssignmentNode, OrAssignmentNode, ListArgumentNode } from "./nodes.js";
import { InvalidSyntaxError } from "./Exceptions.js";
import { is_in } from "./miscellaneous.js";
import { Position } from "./position.js";

/**
 * @classdesc Reads the sequence of tokens in order to create the nodes.
 */
export class Parser {
    /**
     * @constructs Parser
     * @param {Generator} tokens The list of tokens.
     */
    constructor(tokens) {
        this.tokens = Array.from(tokens);
        this.idx = -1;
        this.advancement_count = 0;
        this.backup_index = 0;
        this.advance();
    }

    backup() {
        this.backup_index = this.idx;
    }

    rescue() {
        this.idx = this.backup_index;
        this.backup_index = 0;
    }

    reset_advancement_count() {
        this.advancement_count = 0;
    }

    backwards(steps=1) {
        this.idx -= steps;
        this.advancement_count -= steps;
        if (this.idx < 0) this.idx = 0;
        if (this.advancement_count < 0) this.advancement_count = 0;
        this.set_token();
    }

    try(val) {
        this.advancement_count = 0;
        return val;
    }

    advance() {
        this.idx += 1;
        this.advancement_count += 1;
        this.set_token();
    }

    set_token() {
        /** @type {Token|null} */
        this.current_token = this.idx < this.tokens.length ? this.tokens[this.idx] : null;
    }

    // \n, \r\n or ;
    is_newline() {
        return this.current_token.type === TokenType.NEWLINE || this.current_token.type === TokenType.SEMICOLON;
    }

    // we just want to avoid the newlines (\n)
    // but not the semicolons.
    // That allows us to make the difference between the wanted syntax of the user
    // and a syntax error (a semicolon inside a list declaration for example).
    // Let's take:
    // `return;` // i.e. end of statement
    // However, we might have:
    // ```
    // return
    //     (5 + 5)
    // ```
    ignore_newlines() {
        while (this.current_token.type === TokenType.NEWLINE) {
            this.advance();
        }
    }

    parse() {
        if (this.current_token === null) {
            return null;
        }

        let result = this.statements();

        // not normal
        if (this.current_token !== null && this.current_token.type !== TokenType.EOF) {
            let pos_start = this.current_token.pos_start.copy();
            this.advance();
            let pos_end = this.current_token ? this.current_token.pos_end : pos_start.copy();
            if (this.current_token) {
                pos_end = this.current_token.pos_end;
            } else {
                pos_end = pos_start.copy();
                pos_end.advance(null);
            }
            throw new InvalidSyntaxError(pos_start, pos_end, "Unexpected end of parsing.");
        }

        return result;
    }
    
    statements() {
        let statements = [];
        let pos_start = this.current_token.pos_start.copy();

        while (this.is_newline()) {
            this.advance();
        }

        // the file is empty
        if (this.current_token.type === TokenType.EOF) {
            return new ListNode(statements, null, null);
        }

        let statement = this.statement();
        statements.push(statement);

        let more_statements = this.current_token !== null && this.current_token.type !== TokenType.EOF;

        if (more_statements) {
            while (true) {
                let newline_count = 0;
                while (this.is_newline()) {
                    this.advance();
                    newline_count++;
                }

                if (this.current_token.type === TokenType.EOF) break;

                // there are no more lines
                if (newline_count === 0) more_statements = false;
                if (!more_statements) break;
                
                if (this.current_token.matches(TokenType.KEYWORD, "elif")) {
                    more_statements = false;
                    continue;
                } else if (this.current_token.matches(TokenType.KEYWORD, "else")) {
                    more_statements = false;
                    continue;
                } else if (this.current_token.matches(TokenType.KEYWORD, "end")) {
                    more_statements = false;
                    continue;
                } else if (this.current_token.matches(TokenType.KEYWORD, "case")) { // we don't use `break` for the end of a case in a switch
                    more_statements = false;
                    continue;
                } else if (this.current_token.matches(TokenType.KEYWORD, "default")) { // we don't use `break` for the end of a case in a switch
                    more_statements = false;
                    continue;
                } else {
                    statement = this.statement();

                    if (!statement) {
                        more_statements = false;
                        continue;
                    }

                    statements.push(statement);
                }
            }
            return new ListNode(
                statements,
                pos_start,
                this.current_token.pos_end.copy()
            );
        } else {
            return new ListNode(
                statements,
                pos_start,
                statements[statements.length - 1].pos_end.copy()
            );
        }
    }

    statement() {
        let pos_start = this.current_token.pos_start.copy();

        if (this.current_token.matches(TokenType.KEYWORD, "return")) {
            this.advance();
            this.ignore_newlines();

            let expr = null;
            if (!this.is_newline() && this.current_token.type !== TokenType.EOF) expr = this.expr();
            
            return new ReturnNode(expr, pos_start, this.current_token.pos_end.copy());
        }

        if (this.current_token.matches(TokenType.KEYWORD, "continue")) {
            this.advance();
            return new ContinueNode(pos_start, this.current_token.pos_end.copy());
        }

        if (this.current_token.matches(TokenType.KEYWORD, "break")) {
            this.advance();
            return new BreakNode(pos_start, this.current_token.pos_end.copy());
        }

        if (this.current_token.matches(TokenType.KEYWORD, "class")) {
            let class_expr = this.class_expr();
            return class_expr;
        }

        if (this.current_token.matches(TokenType.KEYWORD, "super")) {
            let pos_start = this.current_token.pos_start.copy();
            this.advance();
            if (this.current_token.type !== TokenType.LPAREN) {
                throw new InvalidSyntaxError(
                    pos_start, this.current_token.pos_end,
                    "Expected parenthesis"
                );
            }
            let call_node = this.helper_call_func(new CustomNode().set_pos(pos_start, this.current_token.pos_end.copy()));
            return new SuperNode(call_node.arg_nodes, pos_start, this.current_token.pos_end);
        }

        if (this.current_token.matches(TokenType.KEYWORD, "enum")) {
            let enum_expr = this.enum_expr();
            return enum_expr;
        }

        return this.expr();
    }

    enum_expr() {
        let pos_start = this.current_token.pos_start.copy();
        this.advance();
        
        if (this.current_token.type !== TokenType.IDENTIFIER) {
            throw new InvalidSyntaxError(
                pos_start, this.current_token.pos_end,
                "Expected an identifier"
            );
        }

        let enum_name_tok = this.current_token;
        let properties = [];
        let is_multiline = false;

        this.advance();

        if (this.current_token.type !== TokenType.COLON) {
            throw new InvalidSyntaxError(
                this.current_token.pos_start, this.current_token.pos_end,
                "Expected a colon ':'"
            );
        }

        this.advance();
        is_multiline = this.is_newline();
        if (is_multiline) this.ignore_newlines();

        if (this.current_token.matches(TokenType.KEYWORD, "pass")) {
            let pos_end = this.current_token.pos_end.copy();
            this.advance();
            if (is_multiline) {
                this.ignore_newlines();
                if (!this.current_token.matches(TokenType.KEYWORD, "end")) {
                    throw new InvalidSyntaxError(
                        pos_start, this.current_token.pos_end,
                        "Expected 'end'"
                    );
                }
                pos_end = this.current_token.pos_end.copy();
                this.advance();
            }
            return new EnumNode(
                enum_name_tok,
                properties,
                pos_start,
                pos_end
            );
        }

        if (this.current_token.type !== TokenType.IDENTIFIER) {
            throw new InvalidSyntaxError(
                pos_start, this.current_token.pos_end,
                "Expected an identifier or 'pass'"
            );
        }

        properties.push(this.current_token);
        this.advance();
        if (is_multiline) this.ignore_newlines();

        while (this.current_token.type === TokenType.COMMA) {
            this.advance();
            if (is_multiline) this.ignore_newlines();
            if (this.current_token.type === TokenType.IDENTIFIER) {
                properties.push(this.current_token);
                this.advance();
                if (is_multiline) this.ignore_newlines();
            } else {
                break;
            }
        }

        if (is_multiline) {
            if (!this.current_token.matches(TokenType.KEYWORD, "end")) {
                throw new InvalidSyntaxError(
                    pos_start, this.current_token.pos_end,
                    "Expected 'end'"
                );
            }
        } else {
            // on a single line statement, we expect the end of the enum statement to be a newline or the end of the file
            if (this.current_token.type !== TokenType.EOF && !this.is_newline()) {
                throw new InvalidSyntaxError(
                    pos_start, this.current_token.pos_end,
                    "Expected newline or ';'"
                );
            }
        }

        let pos_end = this.current_token.pos_end.copy();
        if (this.current_token.type !== TokenType.EOF && !this.is_newline()) this.advance();

        return new EnumNode(
            enum_name_tok,
            properties,
            pos_start,
            pos_end
        );
    }
    
    class_expr() {
        let class_pos_start = this.current_token.pos_start.copy();
        this.advance();

        if (this.current_token.type !== TokenType.IDENTIFIER) {
            throw new InvalidSyntaxError(
                class_pos_start, this.current_token.pos_end,
                "Expected an identifier"
            );
        }

        let class_name_tok = this.current_token;
        let properties = [];
        let methods = [];
        let getters = [];
        let setters = [];
        let parent_class_tok;

        this.advance();

        if (this.current_token.matches(TokenType.KEYWORD, "extends")) {
            this.advance();
            if (this.current_token.type !== TokenType.IDENTIFIER) {
                throw new InvalidSyntaxError(
                    this.current_token.pos_start, this.current_token.pos_end,
                    "Expected an identifier"
                );
            }
            parent_class_tok = this.current_token;
            this.advance();
        }

        if (this.current_token.type !== TokenType.COLON) {
            throw new InvalidSyntaxError(
                class_pos_start, this.current_token.pos_end,
                "Expected ':'"
            );
        }

        // todo: might want to change that when the 'string_with_arrows' function is better
        let class_pos_end = this.current_token.pos_end.copy();

        this.advance();
        let is_multiline = this.is_newline();
        if (is_multiline) this.ignore_newlines();

        const is_public = () => this.current_token.matches(TokenType.KEYWORD, "public");
        const is_private = () => this.current_token.matches(TokenType.KEYWORD, "private");
        const is_protected = () => this.current_token.matches(TokenType.KEYWORD, "protected");
        const is_override = () => this.current_token.matches(TokenType.KEYWORD, "override");
        const is_property = () => this.current_token.matches(TokenType.KEYWORD, "property");
        const is_method = () => this.current_token.matches(TokenType.KEYWORD, "method");
        const is_setter = () => this.current_token.matches(TokenType.KEYWORD, "set");
        const is_getter = () => this.current_token.matches(TokenType.KEYWORD, "get");
        const is_static = () => this.current_token.matches(TokenType.KEYWORD, "static");

        // `class Test: end` I want to write "pass" in this case
        if (this.current_token.matches(TokenType.KEYWORD, "end")) {
            throw new InvalidSyntaxError(
                this.current_token.pos_start, this.current_token.pos_end,
                "Use 'pass' to write an empty class"
            );
        }

        if (this.current_token.matches(TokenType.KEYWORD, "pass")) {
            let pos_end = this.current_token.pos_end.copy();
            this.advance();
            if (is_multiline) {
                this.ignore_newlines();
                if (!this.current_token.matches(TokenType.KEYWORD, "end")) {
                    throw new InvalidSyntaxError(
                        this.current_token.pos_start, this.current_token.pos_end,
                        "Expected 'end'"
                    );
                }
                pos_end = this.current_token.pos_end.copy();
                this.advance();
            }
            return new ClassDefNode(
                class_name_tok,
                parent_class_tok,
                properties,
                methods,
                getters,
                setters,
                class_pos_start,
                pos_end,
            );
        }

        while (
            is_private() ||
            is_public() ||
            is_protected() ||
            is_override() ||
            is_property() ||
            is_method() ||
            is_setter() ||
            is_getter() ||
            is_static()
        ) {
            if (!is_multiline) {
                throw new InvalidSyntaxError(
                    this.current_token.pos_start, this.current_token.pos_end,
                    "Cannot write a class on a single line."
                );
            }

            let status = 1;
            if (is_private()) status = 0;
            if (is_protected()) status = 2;

            if (
                is_private() ||
                is_public() ||
                is_protected()
            ) {
                this.advance();
            }

            let override = is_override() ? 1 : 0;
            if (is_override()) this.advance()
            
            let static_prop = is_static() ? 1 : 0;
            if (is_static()) this.advance();

            if (is_getter() || is_setter() || is_method()) {
                let is_get = is_getter();
                let is_set = is_setter();
                let is_met = is_method();

                let pos_start = this.current_token.pos_start.copy();
                let pos_end = this.current_token.pos_end.copy();
                let func_expr = this.func_expr();
                if (func_expr.var_name_tok === null) {
                    throw new InvalidSyntaxError(
                        pos_start, pos_end,
                        "Expected an identifier"
                    );
                }
                let node = new ClassMethodDefNode(
                    func_expr,
                    status,
                    override,
                    static_prop
                );
                if (is_get) getters.push(node);
                if (is_set) setters.push(node);
                if (is_met) methods.push(node);
                this.advance()
                this.ignore_newlines();
            } else if (is_property()) { // property
                let property_pos_start = this.current_token.pos_start.copy();
                this.advance();
                if (this.current_token.type !== TokenType.IDENTIFIER) {
                    throw new InvalidSyntaxError(
                        property_pos_start, this.current_token.pos_end,
                        "Expected an identifier"
                    );
                }
                let property_name_tok = this.current_token;
                let property_pos_end = this.current_token.pos_end.copy();
                this.advance();
                let value_node;
                if (this.current_token.type === TokenType.EQUALS) {
                    this.advance();
                    value_node = this.expr();
                } else {
                    value_node = new NoneNode(property_pos_start, property_pos_end);
                }
                let property_def_node = new ClassPropertyDefNode(
                    property_name_tok,
                    value_node,
                    status,
                    override,
                    static_prop
                );
                properties.push(property_def_node);
                this.advance();
                this.ignore_newlines();
            } else {
                throw new InvalidSyntaxError(
                    this.current_token.pos_start, this.current_token.pos_end,
                    "The right order is: private/protected/public? override? static? method/property/get/set"
                );
            }
        }

        if (!this.current_token.matches(TokenType.KEYWORD, "end")) {
            throw new InvalidSyntaxError(
                this.current_token.pos_start, this.current_token.pos_end,
                "Expected 'end'"
            );
        }

        this.advance();

        return new ClassDefNode(
            class_name_tok,
            parent_class_tok,
            properties,
            methods,
            getters,
            setters,
            class_pos_start,
            class_pos_end,
        );
    }

    expr() {
        if (this.current_token.matches(TokenType.KEYWORD, "var") || this.current_token.matches(TokenType.KEYWORD, "define")) {
            let is_variable = this.current_token.matches(TokenType.KEYWORD, "var");
            let pos_start = this.current_token.pos_start;
            this.advance();
            
            if (this.current_token.type !== TokenType.IDENTIFIER) {
                throw new InvalidSyntaxError(
                    pos_start, this.current_token.pos_end,
                    "Expected identifier"
                );
            }
            
            const var_name_tok = this.current_token;
            this.advance();

            if (is_variable) { // is var?
                let value_node;
                if (this.current_token.type === TokenType.EQUALS) {
                    this.advance();
                    value_node = this.expr();
                } else {
                    value_node = new NoneNode(this.current_token.pos_start.copy(), this.current_token.pos_end.copy());
                }
                return new VarAssignNode(var_name_tok, value_node);
            } else { // is define?
                if (this.current_token.type !== TokenType.EQUALS) {
                    throw new InvalidSyntaxError(
                        pos_start, this.current_token.pos_end,
                        "Expected equals"
                    );
                }

                this.advance();
                const value_node = this.expr();
                return new DefineNode(var_name_tok, value_node);
            }
        } else if (this.current_token.matches(TokenType.KEYWORD, "delete")) {
            let pos_start = this.current_token.pos_start;
            this.advance();

            let node_to_delete = this.call(); // I don't want to delete properties, so not `this.prop()`

            return new DeleteNode(node_to_delete, pos_start, node_to_delete.pos_end);
        }

        let result = this.comp_expr();
        
        const is_and = () => this.current_token.matches(TokenType.KEYWORD, "and") || this.current_token.type === TokenType.AND;
        const is_or  = () => this.current_token.matches(TokenType.KEYWORD, "or")  || this.current_token.type === TokenType.OR;

        while (this.current_token !== null && (is_and() || is_or())) {
            if (is_and()) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) {
                    this.advance();
                    if (!(result instanceof VarAccessNode) && !(result instanceof ListAccessNode) && !(result instanceof CallPropertyNode) && !(result instanceof CallStaticPropertyNode)) {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                    return new AndAssignmentNode(result, this.expr());
                }
                result = new AndNode(result, this.comp_expr());
            } else if (is_or()) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) {
                    this.advance();
                    if (!(result instanceof VarAccessNode) && !(result instanceof ListAccessNode) && !(result instanceof CallPropertyNode) && !(result instanceof CallStaticPropertyNode)) {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                    return new OrAssignmentNode(result, this.expr());
                }
                result = new OrNode(result, this.comp_expr());
            }
        }

        return result;
    }

    comp_expr() {
        if (this.current_token.matches(TokenType.KEYWORD, "not")) {
            this.advance();
            let node = this.comp_expr();
            return new NotNode(node);
        }

        let result = this.bin_op();
        let possible_tokens = [
            TokenType.DOUBLE_EQUALS,
            TokenType.LT,
            TokenType.GT,
            TokenType.LTE,
            TokenType.GTE,
            TokenType.NOT_EQUAL,
            TokenType.NULLISH_OPERATOR,
        ];

        // 'while' because we want to be able to do:
        // `5 == 5 == yes`
        while (this.current_token !== null && is_in(this.current_token.type, possible_tokens)) {
            if (this.current_token.type === TokenType.DOUBLE_EQUALS) {
                this.advance();
                result = new EqualsNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.LT) {
                this.advance();
                result = new LessThanNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.GT) {
                this.advance();
                result = new GreaterThanNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.LTE) {
                this.advance();
                result = new LessThanOrEqualNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.GTE) {
                this.advance();
                result = new GreaterThanOrEqualNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.NOT_EQUAL) {
                this.advance();
                result = new NotEqualsNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.NULLISH_OPERATOR) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // a ??= 5, a <- 5 only if a == none
                    this.advance();
                    if (!(result instanceof VarAccessNode) && !(result instanceof ListAccessNode) && !(result instanceof CallPropertyNode) && !(result instanceof CallStaticPropertyNode)) {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                    return new NullishAssignmentNode(result, this.expr());
                }
                result = new NullishOperatorNode(result, this.bin_op());
            }
        }

        return result;
    }

    bin_op() {
        let result = this.arith_expr();
        let possible_tokens = [
            TokenType.BINARY_LEFT,
            TokenType.BINARY_RIGHT,
            TokenType.BINARY_UNSIGNED_RIGHT,
            TokenType.LOGICAL_AND,
            TokenType.LOGICAL_OR,
            TokenType.LOGICAL_XOR,
        ];

        while (this.current_token !== null && is_in(this.current_token.type, possible_tokens)) {
            if (this.current_token.type === TokenType.BINARY_LEFT) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // <<=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new BinaryShiftLeftNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new BinaryShiftLeftNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new BinaryShiftLeftNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new BinaryShiftLeftNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.BINARY_RIGHT) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // >>=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new BinaryShiftRightNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new BinaryShiftRightNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new BinaryShiftRightNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new BinaryShiftRightNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.BINARY_UNSIGNED_RIGHT) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // >>>=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new UnsignedBinaryShiftRightNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new UnsignedBinaryShiftRightNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new UnsignedBinaryShiftRightNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new UnsignedBinaryShiftRightNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.LOGICAL_AND) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // &=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new LogicalAndNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new LogicalAndNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new LogicalAndNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new LogicalAndNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.LOGICAL_OR) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // |=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new LogicalOrNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new LogicalOrNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new LogicalOrNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new LogicalOrNode(result, this.bin_op());
            } else if (this.current_token.type === TokenType.LOGICAL_XOR) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // ^=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new LogicalXORNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new LogicalXORNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new LogicalXORNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new LogicalXORNode(result, this.bin_op());
            }
        }

        return result;
    }

    arith_expr() {
        let result = this.term();
        let possible_tokens = [
            TokenType.PLUS,
            TokenType.MINUS,
            TokenType.INC,
            TokenType.DEC,
        ];

        while (this.current_token !== null && is_in(this.current_token.type, possible_tokens)) {
            if (this.current_token.type === TokenType.PLUS) {
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) { // +=
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new AddNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new AddNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new AddNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new AddNode(result, this.term());
            } else if (this.current_token.type === TokenType.MINUS) { // -=
                this.advance();
                if (this.current_token.type === TokenType.EQUALS) {
                    this.advance();
                    if (result instanceof VarAccessNode) {
                        return new VarModifyNode(result.var_name_tok, new SubtractNode(result, this.expr()));
                    } else if (result instanceof ListAccessNode) {
                        return new ListAssignmentNode(result, new SubtractNode(result, this.expr()));
                    } else if (result instanceof CallPropertyNode || result instanceof CallStaticPropertyNode) {
                        return new AssignPropertyNode(result, new SubtractNode(result, this.expr()));
                    } else {
                        throw new InvalidSyntaxError(
                            result.pos_start, this.current_token.pos_end,
                            "Expected a variable"
                        );
                    }
                }
                result = new SubtractNode(result, this.term());
            } else if (this.current_token.type === TokenType.INC) { // a++
                this.advance();
                let difference = 1;
                while (this.current_token.type === TokenType.INC) {
                    difference++;
                    this.advance();
                }
                if (result instanceof ListAccessNode) {
                    return new ListAssignmentNode(result, new AddNode(result, new NumberNode(new Token(TokenType.NUMBER, difference))));
                } else if (result instanceof CallPropertyNode) {
                    return new AssignPropertyNode(result, new NumberNode(new Token(TokenType.NUMBER, difference)));
                } else if (result instanceof CallStaticPropertyNode) {
                    return new AssignPropertyNode(result, new NumberNode(new Token(TokenType.NUMBER, difference)));
                }
                return new PostfixOperationNode(result, difference);
            } else if (this.current_token.type === TokenType.DEC) { // b--
                this.advance();
                let difference = -1;
                while (this.current_token.type === TokenType.DEC) {
                    difference--;
                    this.advance();
                }
                if (result instanceof ListAccessNode) {
                    return new ListAssignmentNode(result, new AddNode(result, new NumberNode(new Token(TokenType.NUMBER, difference))));
                } else if (result instanceof CallPropertyNode) {
                    return new AssignPropertyNode(result, new NumberNode(new Token(TokenType.NUMBER, difference)));
                } else if (result instanceof CallStaticPropertyNode) {
                    return new AssignPropertyNode(result, new NumberNode(new Token(TokenType.NUMBER, difference)));
                }
                return new PostfixOperationNode(result, difference);
            }
        }

        return result;
    }

    /**
     * @returns {CustomNode}
     */
    term() {
        let node_a = this.factor();
        let result;
        let possible_tokens = [
            TokenType.MULTIPLY,
            TokenType.DIVIDE,
            TokenType.POWER,
            TokenType.MODULO
        ];
